--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install vagrant
-  
+
+language: ruby
+rvm:
+  - 1.9.3
+language: python
+python:
+  - "2.7"
+install:
+  - sudo apt-get update -q
+  - sudo wget -nv https://releases.hashicorp.com/vagrant/2.0.0/vagrant_2.0.0_x86_64.deb
+  - sudo dpkg -i vagrant_2.0.0_x86_64.deb
+script:
+  - sudo vagrant validate
