--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ install:
   - sudo wget -nv https://releases.hashicorp.com/vagrant/2.0.0/vagrant_2.0.0_x86_64.deb
   - sudo dpkg -i vagrant_2.0.0_x86_64.deb
 script:
-  - sudo vagrant validate
+  - pwd
+  - vagrant validate
