--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   - "2.7"
 install:
   - sudo apt-get update -q
+  - sudo apt-get install virtualbox
   - sudo wget -nv https://releases.hashicorp.com/vagrant/2.0.0/vagrant_2.0.0_x86_64.deb
   - sudo dpkg -i vagrant_2.0.0_x86_64.deb
 script:
